fix: modification du css de l'image ci/cd

--- a/pages/profile/competence.html
+++ b/pages/profile/competence.html
@@ -85,9 +85,9 @@
                             <br>
                             Référence : <a class="default-link" href="../projet/neptuneDive.html">Projet NeptuneDive</a>
                         </p>
-                        <div class="imgServeur" >
+                        <div>
                             <p style="margin-bottom: 0; font-style: italic;">Conifguration CI/CD Gitlab d'un projet de cours</p>
-                            <img src="../../ressources/img/cicd.png" alt="Code du serveur TCP" style="width: 100%;">
+                            <img src="../../ressources/img/cicd.png" alt="Code du serveur TCP" style="width: 40%;">
                         </div>
                     </div>
                     
